@@ -25,6 +25,7 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <gtk/gtk.h>
+#include <glib.h>
 #include <ticalcs.h>
 #include <tilem.h>
 
@@ -32,6 +33,53 @@
 #include "files.h"
 #include "icons.h"
 #include "msgbox.h"
+
+/* CMD LINE OPTIONS */
+static gchar* cl_romfile = NULL;
+static gchar* cl_skinfile = NULL;
+static gint cl_model = 2;
+static gchar* cl_statefile = NULL;
+static gchar* cl_file_to_load = NULL;
+static gboolean cl_skinless_flag = FALSE;
+static gboolean cl_reset_flag = FALSE;
+static gchar* cl_file_to_exec = NULL;
+static gchar* cl_getvar = NULL;
+static gchar* cl_macro_to_run = NULL;
+static gboolean cl_debug_flag = FALSE;
+static gchar* cl_listingfile = NULL;
+static gchar* cl_symbolfile = NULL;
+static gchar* cl_link = NULL;
+static gboolean cl_limitspeed_flag = FALSE;
+static gboolean cl_fullspeed_flag = FALSE;
+static gchar* cl_batch = NULL;
+static gboolean cl_nogui_flag = FALSE;
+static gboolean cl_save_flag = FALSE;
+
+
+static GOptionEntry entries[] =
+{
+	{ "rom", 'r', 0, G_OPTION_ARG_FILENAME, &cl_romfile, "The rom file to run", "N" },
+	{ "skin", 'k', 0, G_OPTION_ARG_FILENAME, &cl_skinfile, "The skin file to use", "N" },
+	{ "model", 'm', 0, G_OPTION_ARG_INT, &cl_model, "The model to use", "N" },
+	{ "state-file", 's', 0, G_OPTION_ARG_FILENAME, &cl_statefile, "The state-file to use", "M" },
+	{ "load-file", 'f', 0, G_OPTION_ARG_FILENAME, &cl_file_to_load, "Load this file at startup (the file is not executed)", "M" },
+	{ "without-skin", 'l', 0, G_OPTION_ARG_NONE, &cl_skinless_flag, "Start in skinless mode", "M" },
+	{ "reset", 0, 0, G_OPTION_ARG_NONE, &cl_reset_flag, "Reset the calc at startup", NULL },
+	{ "execute", 'x', 0, G_OPTION_ARG_FILENAME, &cl_file_to_exec, "The file to exec at startup", NULL },
+	{ "get-var", 0, 0, G_OPTION_ARG_STRING, &cl_getvar, "Get a var at startup", NULL },
+	{ "play-macro", 'p', 0, G_OPTION_ARG_FILENAME, &cl_macro_to_run, "Run this macro at startup", NULL },
+	{ "debug", 'd', 0, G_OPTION_ARG_NONE, &cl_debug_flag, "Launch debugger", NULL },
+	{ "listing-file", 'L', 0, G_OPTION_ARG_STRING, &cl_listingfile, "Load listing file in the debugger", NULL },
+	{ "symbol-file", 'S', 0, G_OPTION_ARG_STRING, &cl_symbolfile, "Load symbol file in the debugger", NULL },
+	{ "link", 0, 0, G_OPTION_ARG_STRING, &cl_link, "Link cable", NULL },
+	{ "limit-speed", 0, 0, G_OPTION_ARG_NONE, &cl_limitspeed_flag, "Limit the speed", NULL },
+	{ "full-speed", 0, 0, G_OPTION_ARG_NONE, &cl_fullspeed_flag, "Run as fast as possible", NULL },
+	{ "batch", 0, 0, G_OPTION_ARG_FILENAME, &cl_batch, "Launch this batch file", NULL },
+	{ "no-gui", 0, 0, G_OPTION_ARG_NONE, &cl_nogui_flag, "Don't display the gui", NULL },
+	{ "save", 0, 0, G_OPTION_ARG_NONE, &cl_save_flag, "Save state (if running in batch mode and the program finishes normally) ", NULL },
+	{ NULL }
+};
+
 
 /* #########  MAIN  ######### */
 
@@ -109,7 +157,6 @@ static void load_initial_rom(TilemCalcEmulator *emu,
 int main(int argc, char **argv)
 {
 	TilemCalcEmulator* emu;
-	TilemCmdlineArgs* cl;
 	char *menurc_path;
 
 	g_thread_init(NULL);
@@ -125,18 +172,29 @@ int main(int argc, char **argv)
 	init_custom_icons();
 
 	emu = tilem_calc_emulator_new();
+	
+	/* >>>> CMD LINE PARSING */
+	GError *error = NULL;
+	GOptionContext *context;
 
-	cl = tilem_cmdline_new();
-	tilem_cmdline_get_args(argc, argv, cl);
+	context = g_option_context_new ("-= TIlEm Is a Linux EMulator =-");
+	g_option_context_add_main_entries (context, entries, NULL);
+	g_option_context_add_group (context, gtk_get_option_group (TRUE));
+	if (!g_option_context_parse (context, &argc, &argv, &error))
+	{
+		g_print ("option parsing failed: %s\n", error->message);
+		exit (1);
+	}
+	/* <<<< */
 
-	load_initial_rom(emu, cl->RomName, cl->SavName);
+	load_initial_rom(emu, cl_romfile, cl_statefile);
 
 	emu->ewin = tilem_emulator_window_new(emu);
 
-	if (cl->SkinFileName)
-		tilem_emulator_window_set_skin(emu->ewin, cl->SkinFileName);
+	if (cl_skinfile)
+		tilem_emulator_window_set_skin(emu->ewin, cl_skinfile);
 
-	if (cl->isStartingSkinless)
+	if (cl_skinless_flag)
 		tilem_emulator_window_set_skin_disabled(emu->ewin, TRUE);
 
 	gtk_widget_show(emu->ewin->window);
@@ -149,11 +207,11 @@ int main(int argc, char **argv)
 	tifiles_library_init();
 	ticalcs_library_init();
 		
-	if (cl->FileToLoad) /* Given as parameter ? */
-		tilem_link_send_file(emu, cl->FileToLoad, -1, TRUE, TRUE);
-	if (cl->MacroToPlay) { /* Given as parameter ? */
-		printf("macro to load : %s\n", cl->MacroToPlay);
-		tilem_macro_load(emu, cl->MacroToPlay); 		
+	if (cl_file_to_load) /* Given as parameter ? */
+		tilem_link_send_file(emu, cl_file_to_load, -1, TRUE, TRUE);
+	if (cl_macro_to_run) { /* Given as parameter ? */
+		printf("macro to load : %s\n", cl_macro_to_run);
+		tilem_macro_load(emu, cl_macro_to_run); 		
 	}
 
 	g_signal_connect(emu->ewin->window, "destroy",
